Friend requests api docs
